--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "best-sqlite3": "^1.0.19",
+    "express": "^4.18.1",
+    "node": "^17.7.2",
+    "nodemon": "^2.0.16",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.51.0",
+    "sqlite": "^4.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
