--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "best-sqlite3": "^1.0.19",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "node": "^17.7.2",
     "nodemon": "^2.0.16",
