--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "^3.4.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
+    "formidable": "^2.0.1",
     "i": "^0.3.7",
     "node": "^17.7.2",
     "nodemon": "^2.0.16",
